--- a/index.html
+++ b/index.html
@@ -4,8 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 <body>
+    <header>Header</header>
     
+    <main>
+<p>This is the main content of the page.</p>
+
+    </main>
 </body>
 </html>
