--- a/index.html
+++ b/index.html
@@ -4,14 +4,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+
+    <!---- Bootstrap CSS link --->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" 
+integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+
+    <!--    Link to CSS styles  -->
     <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 <body>
-    <header>Header</header>
     
-    <main>
+ <h1>Heading <i class="fa-regular fa-star"></i></h1>
 <p>This is the main content of the page.</p>
 
-    </main>
+ 
+
+
+
+
+
+<!-- Bootstrap JS Bundle link -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
+
+
+<!-- Font Awesome JS -->
+<script src="https://kit.fontawesome.com/be6a51d21a.js" crossorigin="anonymous"></script>
+
 </body>
 </html>
