add CSS variable styles

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJ
 <body>
     
  <h1>Heading <i class="fa-regular fa-star"></i></h1>
-<p>This is the main content of the page.</p>
+<p class="sub-heading-color">This is the main content of the page.</p>
 
  
 
