--- a/game-library.html
+++ b/game-library.html
@@ -25,9 +25,31 @@ integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJ
 <body class="d-flex flex-column min-vh-100">
     
     <!-- Navbar include -->
-<div>
-Navigation Bar
-</div>
+<nav id="navbar" class="navbar navbar-expand-lg" data-bs-theme="dark"> <!-- remove bg-body-tertiary class as it overrid our CSS styles 
+    add data-bs-theme="dark" to default light text on dark background -->
+  <div class="container"> <!-- Remove Container-fluid to align navbar content -->
+    <a class="navbar-brand" href="index.html"><img src="assets/images/logo-sm-white.png" alt="Boardwalk Games logo" class="logo"></a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav ms-auto"> <!-- ms-auto to push nav links to right -->
+        <li class="nav-item">
+          <a class="nav-link" href="index.html">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Services</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="game-library.html">Games</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Contact</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
 
 <!-- Game Library include carousel -->
 
