--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJ
 <nav id="navbar" class="navbar navbar-expand-lg" data-bs-theme="dark"> <!-- remove bg-body-tertiary class as it overrid our CSS styles 
     add data-bs-theme="dark" to default light text on dark background -->
   <div class="container"> <!-- Remove Container-fluid to align navbar content -->
-    <a class="navbar-brand" href="index.html"><img src="assets/images/logo-sm-white.png" alt="Boardwalk Games" class="logo"></a>
+    <a class="navbar-brand" href="index.html"><img src="assets/images/logo-sm-white.png" alt="Boardwalk Games logo" class="logo"></a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -53,11 +53,17 @@ integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJ
 </nav>
 
 <!-- Header include carousel -->
-
     <!-- Emmet sh was header.container>.row>.col-12.col-xl-6*2  -->
-<header class="container">
+<header id="header" class="container section">
     <div class="row">
-        <div class="col-12 col-xl-6">Some placeholder text to see whats up</div>
+        <div class="col-12 col-xl-6 text-center text-xl-start"> <!-- text center on small screens, text start on xl and larger -->
+<h1 class="display-3">Boardwalk Games</h1>
+        <p class="lead display-6 sub-heading-color">Your next adventure is waiting!</p>
+                <p class="my-4">Welcome to Boardwalk Games, Your Ultimate Gaming Getaway! Escape into the world of board games and
+                    café delights. Whether you're a casual gamer seeking a cosy nook to unwind, a board game enthusiast
+                    ready for your next challenge, or a student gamer looking for a fun, affordable hangout, we've got
+                    you covered.</p>
+        </div>
         <div class="col-12 col-xl-6">More placeholder text to checkout</div>
     </div>
 </header>
