add new games to game-library.html

--- a/game-library.html
+++ b/game-library.html
@@ -97,20 +97,65 @@ integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJ
     </div>
 </header>
 
-<!-- Main content holding all key sections of game-library page. Does not influence grid structure -->
+<!-- Main content holding all key sections of game-library page. Main does not influence grid structure -->
 <main>
     <!-- New Games section-->
-  
-    <section class="container">
-        <div class="row">
-            <div class="col-12">New Games section Heading</div>
-    <div class="col-12 col-md-6 col-xl-3">New Games card</div>
-    <div class="col-12 col-md-6 col-xl-3">New Games card</div>
-    <div class="col-12 col-md-6 col-xl-3">New Games card</div>
-    <div class="col-12 col-md-6 col-xl-3">New Games card</div>
-        </div>
-    </section>
 
+    <section id="new-games" class="container section">
+            <div class="row">
+                <div class="col-12 text-center">
+                    <h2 class="display-6">New games</h2>
+                </div>
+                <div class="col-12 col-md-6 col-xl-3">
+                    <div class="card">
+                        <img class="card-img-top" src="assets/images/new-games-1.webp" alt="Galaxy Pioneers board game">
+                        <div class="card-body">
+                            <h3 class="card-title sub-heading-color">Galaxy Pioneers</h3>
+                            <p class="card-text">Utilise resources wisely, negotiate with alien species, and navigate
+                                cosmic events to expand your interstellar empire.</p>
+                            <p><em>Number of players:</em> 2-4</p>
+                            <p><em>Ages:</em> 12+</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-md-6 col-xl-3">
+                    <div class="card">
+                        <img class="card-img-top" src="assets/images/new-games-2.webp" alt="Mystic Woods board game box">
+                        <div class="card-body">
+                            <h3 class="card-title sub-heading-color">Mystic Woods</h3>
+                            <p class="card-text">Enter the enchanted forest of Mystic Woods. Combine spells, gather
+                                mystical creatures, and solve puzzles to protect the realm.</p>
+                            <p><em>Number of players:</em> 1-6</p>
+                            <p><em>Ages:</em> 10+</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-md-6 col-xl-3">
+                    <div class="card">
+                        <img class="card-img-top" src="assets/images/new-games-3.webp" alt="Captain's Gambit board game box">
+                        <div class="card-body">
+                            <h3 class="card-title sub-heading-color">Captain's Gambit</h3>
+                            <p class="card-text">Engage in battles, form fleeting alliances, and navigate treacherous
+                                waters to become the most feared pirate of them all.</p>
+                            <p><em>Number of players:</em> 3-4</p>
+                            <p><em>Ages:</em> 14+</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-md-6 col-xl-3">
+                    <div class="card">
+                        <img class="card-img-top" src="assets/images/new-games-4.webp" alt="Critter Quest board game box">
+                        <div class="card-body">
+                            <h3 class="card-title sub-heading-color">Critter Quest</h3>
+                            <p class="card-text">Solve simple puzzles, collect magical gems, and help friends along the
+                                way in this heartwarming journey of discovery and friendship.</p>
+                            <p><em>Number of players:</em> 2-4</p>
+                            <p><em>Ages:</em> 5+</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     <!-- Favourite Games section-->
    <section class="container">
         <div class="row">
