add favourite games to game-library.html

--- a/game-library.html
+++ b/game-library.html
@@ -156,17 +156,68 @@ integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJ
                 </div>
             </div>
         </section>
-    <!-- Favourite Games section-->
-   <section class="container">
-        <div class="row">
-            <div class="col-12">Favourite Games section Heading</div>
 
-    <div class="col-12 col-md-6 col-xl-3">Favourite Games card</div>
-    <div class="col-12 col-md-6 col-xl-3">Favourite Games card</div>
-    <div class="col-12 col-md-6 col-xl-3">Favourite Games card</div>
-    <div class="col-12 col-md-6 col-xl-3">Favourite Games card</div>
-        </div>
-    </section>
+
+
+    <!-- Favourite Games section-->
+     
+ <section id="fav-games" class="container section">
+            <div class="row">
+                <div class="col-12 text-center">
+                    <h2 class="display-6">Favourites</h2>
+                </div>
+                <div class="col-12 col-md-6 col-xl-3">
+                    <div class="card">
+                        <img class="card-img-top" src="assets/images/fav-games-1.webp" alt="Settlers of Catan board game">
+                        <div class="card-body">
+                            <h3 class="card-title sub-heading-color">Settlers of Catan</h3>
+                            <p class="card-text">Picture yourself in the era of discoveries: after a long voyage of
+                                great deprivation, your ships have finally reached the coast of an uncharted island.</p>
+                            <p><em>Number of players:</em> 3-4</p>
+                            <p><em>Ages:</em> 10+</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-md-6 col-xl-3">
+                    <div class="card">
+                        <img class="card-img-top" src="assets/images/fav-games-2.webp" alt="Monopoly board game">
+                        <div class="card-body">
+                            <h3 class="card-title sub-heading-color">Monopoly</h3>
+                            <p class="card-text">Featuring classic Monopoly gameplay, this favourite family board game
+                                is all about buying, selling, and trading properties to win.</p>
+                            <p><em>Number of players:</em> 2-6</p>
+                            <p><em>Ages:</em> 8+</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-md-6 col-xl-3">
+                    <div class="card">
+                        <img class="card-img-top" src="assets/images/fav-games-3.webp" alt="Exploding Kittens card game">
+                        <div class="card-body">
+                            <h3 class="card-title sub-heading-color">Exploding Kittens</h3>
+                            <p class="card-text">Exploding Kittens is a kitty-powered version of Russian Roulette.
+                                Players take turns drawing cards until someone draws an exploding kitten card and loses
+                                the game!</p>
+                            <p><em>Number of players:</em> 2-5</p>
+                            <p><em>Ages:</em> 7+</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-md-6 col-xl-3">
+                    <div class="card">
+                        <img class="card-img-top" src="assets/images/fav-games-4.webp" alt="Cluedo board game">
+                        <div class="card-body">
+                            <h3 class="card-title sub-heading-color">Cluedo</h3>
+                            <p class="card-text">The classic game of mystery and suspense. Cluedo has 6 suspects, 6
+                                weapons and also a whole maze of possible murder scenes to explore. It's up to you to
+                                question the suspects and crack the case.</p>
+                            <p><em>Number of players:</em> 2-6</p>
+                            <p><em>Ages:</em> 8+</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
 </main>
 
     <!-- Footer including contact information and opening times -->
