--- a/game-library.html
+++ b/game-library.html
@@ -160,7 +160,7 @@ integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJ
 
 
     <!-- Favourite Games section-->
-     
+
  <section id="fav-games" class="container section">
             <div class="row">
                 <div class="col-12 text-center">
@@ -221,15 +221,37 @@ integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJ
 </main>
 
     <!-- Footer including contact information and opening times -->
-<footer class="mt-auto"> <!-- margin top auto to push footer to bottom, works with body class-->
-<div class="container">
+<footer id="contact" class="mt-auto"> <!-- margin top auto to push footer to bottom, works with body class-->
+<div class="container section">
     <!-- justify content center to center the row contents on larger screens -->
-    <div class="row justify-content-center">
-        <div class="col-12">Contact Section Heading</div>
-        
-        <!-- Contact Information -->
-        <!-- Emmet shorthand for .col-12.col-md-6.col-xl-4*2 -->
-        <div class="col-12 col-md-6 col-xl-4">Contact info & social media</div>
+            <div class="row justify-content-center">
+                <div class="col-12 text-center">
+                    <h2 class="display-6">Contact us!</h2>
+                </div>
+                <!-- Contact info -->
+                <div class="col-12 col-md-6 col-xl-4">
+                    <h3 class="sub-heading-color">Contact info</h3>
+                    <address>
+                        <strong><i class="fa-solid fa-location-dot"></i> Boardwalk Games</strong><br>
+                        123 Boardwalk<br>
+                        Boardwalk City, 12345
+                    </address>
+                    <p><i class="fa-solid fa-phone"></i> 012 345 6789<br>
+                        <i class="fa-regular fa-paper-plane"></i> info@boardwalk-games.co
+                    </p>
+                    <!-- Social media links with Font Awesome icons -->
+                     <!--  NB: rel="noopener" standard practice to safely open social media links in new tabs -->
+                    <div class="social-links mt-4">
+                        <a href="https://www.instagram.com" target="_blank"
+                            aria-label="Visit our Instagram page (opens in a new tab)" rel="noopener"><i
+                                class="fa-brands fa-instagram"></i></a>
+                        <a href="https://www.facebook.com" target="_blank"
+                            aria-label="Visit our Facebook page (opens in a new tab)" rel="noopener"><i
+                                class="fa-brands fa-square-facebook"></i></a>
+                        <a href="https://www.x.com" target="_blank" aria-label="Visit our X feed (opens in a new tab)"
+                            rel="noopener"><i class="fa-brands fa-x-twitter"></i></a>
+                    </div>
+                </div>
         <!-- Opening Times -->
         <div class="col-12 col-md-6 col-xl-4">Opening times</div>
     </div>
