--- a/game-library.html
+++ b/game-library.html
@@ -239,9 +239,10 @@ integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJ
                     <p><i class="fa-solid fa-phone"></i> 012 345 6789<br>
                         <i class="fa-regular fa-paper-plane"></i> info@boardwalk-games.co
                     </p>
+
                     <!-- Social media links with Font Awesome icons -->
                      <!--  NB: rel="noopener" standard practice to safely open social media links in new tabs -->
-                    <div class="social-links mt-4">
+                    <div class="social-links my-4">
                         <a href="https://www.instagram.com" target="_blank"
                             aria-label="Visit our Instagram page (opens in a new tab)" rel="noopener"><i
                                 class="fa-brands fa-instagram"></i></a>
@@ -253,7 +254,41 @@ integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJ
                     </div>
                 </div>
         <!-- Opening Times -->
-        <div class="col-12 col-md-6 col-xl-4">Opening times</div>
+        <div class="col-12 col-md-6 col-xl-4">
+            <h3 class="sub-heading-color">Opening times</h3>
+            <table class="table table-dark">
+  <thead>
+    <tr>
+      <th scope="col">Day</th>
+      <th scope="col">Open</th>
+      <th scope="col">Close</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <th scope="row">Monday</th>
+      <td><em>Closed</em></td>
+      <td> </td>
+    </tr>
+    <tr>
+      <th scope="row">Tuesday to Thursday</th>
+      <td>11am</td>
+      <td>11pm</td>
+    </tr>
+    <tr>
+      <th scope="row">Friday & Saturday</th>
+      <td>11am</td>
+      <td>12am</td>
+    </tr>
+        <tr>
+      <th scope="row">Sunday</th>
+      <td>12pm</td>
+      <td>7pm</td>
+    </tr>
+  </tbody>
+</table>
+
+        </div>
     </div>
 </div>
 </footer> 
