add booking.html and booking form

--- a/game-library.html
+++ b/game-library.html
@@ -44,7 +44,10 @@ integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJ
           <a class="nav-link active" aria-current="page" href="game-library.html">Games</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Contact</a>
+          <a class="nav-link" href="index.html#contact">Contact</a>
+        </li>
+        <li class="nav-item">
+            <a href="booking.html" class="btn btn-primary ms-lg-3">Book now</a>
         </li>
       </ul>
     </div>
