--- a/booking.html
+++ b/booking.html
@@ -77,7 +77,7 @@ integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJ
         <div class="row justify-content-center">
             <div class="col-12 col-md-8">
                 <h2>Booking inquiry</h2>
-                <form>
+                <form action="success.html" method="GET">
                     <div class="row">
                         <div class="col-12 col-lg-6 mb-3">
                             <label for="name" class="form-label">Name</label>
