--- a/game-library.html
+++ b/game-library.html
@@ -47,7 +47,7 @@ integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJ
           <a class="nav-link" href="index.html#contact">Contact</a>
         </li>
         <li class="nav-item">
-            <a href="booking.html" class="btn btn-primary ms-lg-3">Book now</a>
+            <a href="booking.html" class="btn custom-button-filled ms-lg-3">Book now</a>
         </li>
       </ul>
     </div>
