--- a/success.html
+++ b/success.html
@@ -50,7 +50,8 @@ integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJ
             <a class="nav-link" href="index.html#contact">Contact</a>
           </li>
           <li class="nav-item">
-            <a class="btn btn-primary ms-3" href="booking.html">Book now</a>
+                       <a href="booking.html" class="btn custom-button-filled ms-lg-3">Book now</a>
+
           </li>
         </ul>
       </div>
@@ -63,7 +64,7 @@ integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJ
       <div class="col-12 col-md-8">
         <h1 class="display-3">Thank you!</h1>
         <p class="lead">Your form has been submitted successfully!</p>
-        <a href="index.html" class="btn btn-primary mb-5">Return to the home page</a>
+        <a href="index.html" class="btn custom-button-outline mb-5">Return to the home page</a>
       </div>
     </div>
   </main>
