add book now button undreneath join our event info

--- a/index.html
+++ b/index.html
@@ -242,14 +242,15 @@ integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJ
     </tr>
   </tbody>
 </table>
+          <div class="text-center mt-2">
+            <div class="twenty-off mb-4">*Get 20% off with valid student ID</div>
+          </div>
         </div>
       </div>
-      <!-- Discount banner row -->
-      <div class="row">
-        <div class="col-12 text-center mt-2">
-          <div class="twenty-off">*Get 20% off with valid student ID</div>
+      <div class="col-12 text-center"> <!-- text center on screens -->
+
+                    <a href="booking.html" class="btn custom-button-outline mb-4">Book now</a> <!-- mb-4 for margin bottom  -->
         </div>
-      </div>
     </section>
 </main>
 
