--- a/game-library.html
+++ b/game-library.html
@@ -40,6 +40,9 @@ integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJ
         <li class="nav-item">
           <a class="nav-link" href="#">Services</a>
         </li>
+               <li class="nav-item">
+          <a class="nav-link" href="index.html#events">Events</a>
+        </li>
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="game-library.html">Games</a>
         </li>
