commit before closedown

--- a/success.html
+++ b/success.html
@@ -43,6 +43,9 @@ integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJ
           <li class="nav-item">
             <a class="nav-link" href="index.html#services">Services</a>
           </li>
+                 <li class="nav-item">
+          <a class="nav-link" href="index.html#events">Events</a>
+        </li>
           <li class="nav-item">
             <a class="nav-link" href="game-library.html">Games</a>
           </li>
