--- a/success.html
+++ b/success.html
@@ -65,7 +65,7 @@ integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJ
   <main id="success" class="container section text-center">
     <div class="row justify-content-center">
       <div class="col-12 col-md-8">
-        <h1 class="display-3">Thank you!</h1>
+        <h1 class="display-3 capitalize">Thank You!</h1>
         <p class="lead">Your form has been submitted successfully!</p>
         <a href="index.html" class="btn custom-button-outline mb-5">Return to the home page</a>
       </div>
