fixed-top to navbar and additional padding in css body

--- a/game-library.html
+++ b/game-library.html
@@ -237,7 +237,7 @@ integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJ
           <p>Reserve a board game for your next visit to Boardwalk Games. Pick your challenge, and let the adventure begin! 
             Fill out your details and preferred game below, and we'll have it set aside for you when you arrive.
           </p>
-        <!-- reserve game form -->
+        <!-- reserve form start -->
                 <form action="success.html" method="GET">
                     <div class="row">
                         <div class="col-12 col-lg-4 mb-3">
