Adjust css so navbar does not cover headings

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJ
           <a class="nav-link active" aria-current="page" href="index.html">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Services</a>
+          <a class="nav-link" href="index.html#services">Services</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="index.html#events">Events</a>
