--- a/game-library.html
+++ b/game-library.html
@@ -25,7 +25,7 @@ integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJ
 <body class="d-flex flex-column min-vh-100">
     
     <!-- Navbar include -->
-<nav id="navbar" class="navbar navbar-expand-lg" data-bs-theme="dark"> <!-- remove bg-body-tertiary class as it overrid our CSS styles 
+<nav id="navbar" class="navbar navbar-expand-lg fixed-top" data-bs-theme="dark"> <!-- remove bg-body-tertiary class as it overrid our CSS styles 
     add data-bs-theme="dark" to default light text on dark background -->
   <div class="container"> <!-- Remove Container-fluid to align navbar content -->
     <a class="navbar-brand" href="index.html"><img src="assets/images/logo-sm-white.png" alt="Boardwalk Games logo" class="logo"></a>
@@ -38,7 +38,7 @@ integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJ
           <a class="nav-link" href="index.html">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Services</a>
+          <a class="nav-link" href="index.html#services">Services</a>
         </li>
                <li class="nav-item">
           <a class="nav-link" href="index.html#events">Events</a>
