--- a/game-library.html
+++ b/game-library.html
@@ -13,7 +13,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicon-16x16.png">
 
 
-    <!---- Bootstrap CSS link --->
+    <!--- Bootstrap CSS link --->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" 
 integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
 
@@ -285,7 +285,7 @@ integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJ
                     </div>
 <div class="col-12 text-end">
                     <button type="submit" class="btn custom-button-outline mt-3">Submit</button></div>
-                        </div>
+                        
                     </form>
                 </div>
             </div>
