--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       href="assets/images/favicon-16x16.png"
     />
 
-    <!---- Bootstrap CSS link --->
+    <!--- Bootstrap CSS link --->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css"
       rel="stylesheet"
