fix typo index line 317

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     />
 
     <!--    Link to CSS styles  -->
-    <link rel="stylesheet" href="assets/css/styles.css" />
+    <link rel="stylesheet" href="assets/css/styles.css"/>
   </head>
 
   <!-- Body with Bootstrap flex classes to ensure footer sticks to bottom of viewport -->
@@ -314,7 +314,7 @@
               and enjoy gaming for less!
             </p>
             <p>
-              Outside schedulled events, our shop remains open for regular play.
+              Outside scheduled events, our shop remains open for regular play.
               Join us anytime to discover new games and meet fellow enthusiasts.
             </p>
           </div>
